// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message[Base] should render correctly  1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 24px;"
>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show
    </span>
  </button>
  <button
    class="soui-button soui-button-primary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Info
    </span>
  </button>
  <button
    class="soui-button soui-button-success soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Success
    </span>
  </button>
  <button
    class="soui-button soui-button-warning soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Warn
    </span>
  </button>
  <button
    class="soui-button soui-button-danger soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Error
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin: 0px;"
    type="button"
  >
    <span>
      Close All
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  2`] = `
<div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Duration 10 s.
    </span>
  </button>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    style="margin-inline-start: 24px;"
    type="button"
  >
    <span>
      Manually close
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render correctly  3`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <div
      class="soui-radio-group"
    >
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          middle
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          top-right
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-left
        </span>
      </div>
      <div
        class="soui-radio soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="soui-radio-indicator-wrapper"
        >
          <span
            class="soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="soui-radio-desc"
        >
          bottom-right
        </span>
      </div>
    </div>
  </div>
  <button
    class="soui-button soui-button-secondary soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      Show message.
    </span>
  </button>
</div>
`;

exports[`Message[Base] should render default 1`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Message[Base] should render default 2`] = `
<div
  class="soui-message soui-message-wrapper"
  data-soui-position="top"
>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-message-item soui-message-item-show "
  >
    <div
      class="soui-message-message soui-alert soui-alert-alert soui-alert-warning"
      data-soui-type="message"
    >
      <div
        class="soui-alert-content"
      >
        <div
          class="soui-alert-text"
        >
          Test
        </div>
      </div>
      <div
        class="soui-alert-close-wrapper"
      >
        <div
          class="soui-alert-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
